--- a/package.json
+++ b/package.json
@@ -21,20 +21,20 @@
     "export": "slidev export"
   },
   "dependencies": {
-    "@slidev/cli": "^0.40.14",
+    "@slidev/cli": "^0.42.8",
     "@stackblitz/sdk": "^1.9.0",
-    "@vueuse/core": "^10.1.2",
-    "three": "^0.151.3"
+    "@vueuse/core": "^10.7.1",
+    "three": "^0.160.0"
   },
   "devDependencies": {
     "@alvarosabu/prettier-config": "^1.3.0",
-    "@alvarosabu/ui": "^2.20.0",
-    "@iconify-json/logos": "^1.1.25",
-    "@iconify-json/simple-icons": "^1.1.49",
-    "@tresjs/cientos": "2.0.0-rc.3",
-    "@tresjs/core": "2.0.0-rc.4",
-    "gsap": "^3.11.5",
-    "sass": "^1.62.0",
-    "slidev-theme-penguin": "^1.7.1"
+    "@alvarosabu/ui": "3.0.0-alpha.13",
+    "@iconify-json/logos": "^1.1.42",
+    "@iconify-json/simple-icons": "^1.1.87",
+    "@tresjs/cientos": "3.7.0",
+    "@tresjs/core": "3.6.0",
+    "gsap": "^3.12.4",
+    "sass": "^1.69.7",
+    "slidev-theme-penguin": "^2.0.2"
   }
 }
